--- a/style.css
+++ b/style.css
@@ -2,22 +2,20 @@ body {
 font-family: Arial, sans-serif;
 margin: 0;
 padding: 0; 
-background: black;
-color: white;
+background: #e5e5e5;
+color: #3f3f3f;
 font-size: 16px;
 line-height: 24px;
 }
 
-a { color: White; }
-a:hover { color: Red; }
+a { color: #000088; }
+a:hover { color: #880000; }
 
 #wrap { 
 margin: 40px auto;
 width: 940px;
 background: #fff;
-  background-repeat: repeat;
-  background-position: top;
-  background-size: 100% auto;
+
 box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -27,23 +25,21 @@ border-radius: 10px;
 }
 
 #header {
-     font-family: 'GetVoIPGrotesqueItalic'; 
-   font-weight: normal; 
-   font-style: italic; 
-background-image: url("./img/bg1.jpg");
-background-repeat: no-repeat;
-background-position: top;
-background-size: 100% auto;
+-webkit-border-top-left-radius: 10px;
+-webkit-border-top-right-radius: 10px;
+-moz-border-radius-topleft: 10px;
+-moz-border-radius-topright: 10px;
 border-top-left-radius: 10px;
 border-top-right-radius: 10px;
 
+background: #f9f9f9;
 padding: 20px 0 40px 0;
 }
 #header h1 {
 margin: 0;
 padding: 0 0 0 30px;
 font-weight: bold;
-color: white;
+color: #3f3f3f;
 font-size: 38px;
 line-height: 65px;
 letter-spacing: -1px;
@@ -55,21 +51,19 @@ border-radius: 10px;
 margin: 0 0 0 20px; 
 padding: 5px 12px;
 font-weight: normal;
-color: white;
+color: #171717;
 font-size: 22px;
 letter-spacing: -1px;
+background: #FFEE9F;
+border: 1px solid #FFE25F;
 display: inline;
-   font-weight: normal;
-background: #000000; color: #d6ac51; padding: 10px; margin: 10px 0;
-
 }
 
 #topmenu {
-background: rgba(0, 0, 0, 0.8);
+background: #f1f1f1;
 padding: 10px 20px;
 border-bottom: 1px solid #e1e1e1;
 border-top: 1px solid #e1e1e1;
-
 }
 #topmenu ul { margin: 0; padding: 0; list-style-type: none;}
 #topmenu li { display: inline; padding: 0 20px 0 0 }
@@ -84,11 +78,9 @@ float: right;
 width: 300px; 
 color: #fff;
 margin: 30px 20px 20px 0;
-background-color: rgba(0,0,0,0.7);
 }
 #menu h3 {
-font-weight: normal; 
-background: #000000; color: #d6ac51; padding: 10px; margin: 10px 0; 
+font-weight: normal; background: #5f5f5f; color: #fff; padding: 10px; margin: 10px 0; 
 }
 #menu ul { 
 -webkit-border-radius: 10px;
@@ -97,66 +89,32 @@ border-radius: 10px;
 
 list-style-type: none; margin: 0; padding: 0 10px 10px 10px;
 }
-#menu ul li a { color: #CFCFCF; text-decoration: none; border-bottom: 1px dotted #CFCFCF; }
-#menu ul li a:hover { color: #d6ac51; border-bottom: 1px dotted #CFCFCF; }
+#menu ul li a { color: #12c; text-decoration: none; border-bottom: 1px dotted #12c; }
+#menu ul li a:hover { color: #c12; border-bottom: 1px dotted #c12; }
 
-#content {
-  float: none;
-  width: 870px;
-  margin: 20px auto 30px auto;
-  background-color: rgba(0,0,0,0.7);
-}
-#content1{
-  padding: 27px; 
-}
-#content h2 { 
-  font-weight: normal;
-background: #000000; color: #d6ac51; padding: 10px; margin: 10px 0; 
-   font-size: 22px; 
-   line-height: 33px; 
-   color: rgb(194, 179, 103);}
+#content { float: left; width: 580px; margin: 10px 0 40px 20px;}
+#content h2 { font-weight: normal; font-size: 22px; line-height: 33px; }
 #content h3 { font-size: 17px; font-weight: normal; }
-.thumbnail {
-  position: relative;
-  width: 120px;
-  height: 140px;
-  overflow: hidden;
-}
-.thumbnail img {
-  position: absolute;
-  left: 50%;
-  top: 57%;
-  height: 100px;
-  width: 100px;
-  -webkit-transform: translate(-50%,-50%);
-      -ms-transform: translate(-50%,-50%);
-          transform: translate(-50%,-50%);
-}
-.thumbnail img.portrait {
-  width: 100%;
-  height: 100%;
-}
-#table1 {
-	font-size: 11px;
-  text-align: center;
-}
-#footer { 
-  background-image: url("./img/bg1.jpg");
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: 100% auto;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
 
-color: black;
+.cleft { float: left; width: 280px; margin: 10px 0; }
+.cright { float: right; width: 280px; margin: 10px 0; }
+
+#footer { 
+-webkit-border-bottom-right-radius: 10px;
+-webkit-border-bottom-left-radius: 10px;
+-moz-border-radius-bottomright: 10px;
+-moz-border-radius-bottomleft: 10px;
+border-bottom-right-radius: 10px;
+border-bottom-left-radius: 10px;
+
+background: #3f3f3f;
+color: #fff;
 padding: 20px;
-border-top: 1px solid black;
+border-top: 1px solid #1f1f1f;
 }
-#footer a { color: black; text-decoration: none; border-bottom: 1px dotted #fff; }
-#footer a:hover { border-bottom: 1px dotted black; }
+#footer a { color: #fff; text-decoration: none; border-bottom: 1px dotted #fff; }
+#footer a:hover { border-bottom: 1px dotted #ccc; }
 
 .left { float: left; }
-.right { float: right;
-text-align: right; }
+.right { float: right; }
 .clear { clear: both; }
-#line {background-color: black; height: 6px}
